# hw_7

./: pyproject.toml
hw_7/: config.ini  my_select.py
hw_7/seed/: seed.py
hw_7/src/: db.py  models.py
migrations/: env.py
migrations/versions/: 176bb3cd3b5c_init.py
