[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw_7"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.3.1"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
